--- a/app/globals.css
+++ b/app/globals.css
@@ -22,17 +22,13 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-align: center;
 }
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -42,7 +38,34 @@ a {
 }
 
 img {
-  height: 100%;
-  width: 100%;
-  object-fit: contain;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
+}
+
+img[src^="http"] {
+  width: 30%;
+}
+
+@media only screen and (max-width: 600px) {
+  ::-webkit-scrollbar {
+    width: 0px;
+  }
+
+  img,
+  img[src^="http"] {
+    max-width: 100vw;
+  }
+
+  p {
+    padding-left: 1ch;
+    padding-right: 1ch;
+  }
+
+  p>img {
+    margin-left: -1ch;
+    margin-right: -1ch;
+    width: 100vw;
+  }
 }
