--- a/app/globals.css
+++ b/app/globals.css
@@ -20,6 +20,7 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  font-size: 24px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
@@ -53,6 +54,10 @@ img[src^="http"] {
     width: 0px;
   }
 
+  body {
+    font-size: 16px;
+  }
+
   img,
   img[src^="http"] {
     max-width: 100vw;
@@ -63,7 +68,8 @@ img[src^="http"] {
     padding-right: 1ch;
   }
 
-  p>img {
+  p>img,
+  p>img[src^="http"] {
     margin-left: -1ch;
     margin-right: -1ch;
     width: 100vw;
