--- a/app/page.module.css
+++ b/app/page.module.css
@@ -11,7 +11,8 @@
   align-items: center;
   justify-items: center;
   min-height: 100svh;
-  padding: 80px;
+  padding-left: 80px;
+  padding-right: 80px;
   gap: 64px;
   font-family: var(--font-geist-sans);
 }
